--- a/index.html
+++ b/index.html
@@ -3,3 +3,5 @@ layout: home
 title: Robin Na
 subtitle: Massachusetts Institute of Technology
 ---
+
+I am a first-year PhD student at the Information Technology Group at MIT Sloan School of Management.
